[package]
name = "minecraft_terminal_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
image = "0.24.8"
rand_core = "0.6.4"
ratatui = "0.29.0"
russh = "0.52.1"
termwiz = "0.23.3"
tokio = "1.45.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
