[package]
name = "minecraft_terminal_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
image = "0.25"
nix = { version = "0.30", features = ["signal"] }
pipe = "0.4"
rand_core = "0.6"
ratatui = "0.29"
russh = "0.52"
termwiz = "0.23"
tokio = "1.45"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
